@@ -53,6 +53,33 @@ int32_t SPVM__Net__SSLeay__X509_STORE_CTX__get_error_depth(SPVM_ENV* env, SPVM_V
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__X509_STORE_CTX__get_current_cert(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  X509_STORE_CTX* x509_store_ctx = env->get_pointer(env, stack, obj_self);
+  
+  X509* x509 = X509_STORE_CTX_get_current_cert(x509_store_ctx);
+  
+  void* obj_x509 = NULL;
+  
+  if (x509) {
+    void* obj_address_x509 = env->new_pointer_object_by_name(env, stack, "Address", x509, &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    stack[0].oval = obj_address_x509;
+    env->call_class_method_by_name(env, stack, "Net::SSLeay::X509", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);  
+    if (error_id) { return error_id; }
+    obj_x509 = stack[0].oval;
+    env->set_no_free(env, stack, obj_x509, 1);
+  }
+  
+  stack[0].oval = obj_x509;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__X509_STORE_CTX__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
