@@ -36,6 +36,16 @@ C<method get_error_depth : int ();>
 
 Calls native L<X509_STORE_CTX_get_error_depth|https://docs.openssl.org/master/man3/X509_STORE_CTX_get_error_depth> function, and returns its return value.
 
+=head2 get_current_cert
+
+C<method get_current_cert : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> ();>
+
+Calls native L<X509_STORE_CTX_get_current_cert|https://docs.openssl.org/master/man3/X509_STORE_CTX_get_error_depth> function.
+
+If the return value is NULL, returns undef.
+
+Otherwise, creates a new new L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> object, sets the pointer value of the new object to the return value of the native function, sets C<no_free> flag of the new object to 1, returns the new object.
+
 =head1 Copyright & License
 
 Copyright (c) 2024 Yuki Kimoto
